# fisherboy

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  docker-compose.integration.yml  docker-compose.observability.yml  docker-compose.standalone.yml  docker-compose.yml  privacy_matrix.yaml  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
app/: __init__.py  callbacks.py  config.py  logging.py  main.py  mcp_server.py  models.py  pipeline.py  privacy_policy.py  queue.py  worker.py
app/crawl/: crawler.py  discovery.py  frontier.py  (+2 more)
docs/: ADR-001-arquitectura-y-modos.md  ADR-002-modos-privacidad.md  ADR-003-contrato-anonimal.md  ADR-004-seguridad.md  ADR-005-reversible-threat-model.md  ADR-006-fetch-escalonado.md  ADR-007-crawling-discovery.md  ADR-008-extraccion-llm-reversible.md  ADR-009-observabilidad-y-cierre.md  ADR-010-doctrina-antiscraping.md  ADR-011-integracion-escriba.md  ADR-012-auditoria-seguridad.md  DEPLOY.md  FISHERBOY-build.md
observability/: loki-config.yml  prometheus.yml  promtail-config.yml
scripts/: devserver.py
tests/: conftest.py  test_app.py  test_assets.py  test_auth_gating.py  test_capture_rank.py  test_cloudflare.py  test_comments.py  test_cookies.py  test_crawl.py  test_documents.py  test_fetch_tiers.py  test_gallery.py  test_instagram.py  test_llm_extract.py  test_media.py  test_output_obs.py  test_overrides_multimotor.py  test_pagination.py  test_parsing_vectors_frontier.py  test_pipeline.py  test_pipeline_advanced.py  test_privacy.py  test_records_scope.py  test_reversible.py  test_security.py
(+46 files in other folders)
